# telley-obs-dep-obs-ndi

./: CMakeLists.txt
cmake/: ObsPluginHelpers.cmake
cmake/bundle/macos/: installer-macos.pkgproj.in
data/locale/: en-US.ini
lib/ndi/: Processing.NDI.Lib.h
